Closed
Bug 328680
Opened 19 years ago
Closed 7 years ago
Remove nsIListControlFrame
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla64
Tracking | Status | |
---|---|---|
firefox64 | --- | fixed |
People
(Reporter: marcldl+mozbugs, Assigned: enndeakin)
References
Details
Attachments
(1 file)
15.59 KB,
patch
|
MatsPalmgren_bugz
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.1) Gecko/20060124 Firefox/1.5.0.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.1) Gecko/20060124 Firefox/1.5.0.1
This interface isn't necessary since only one class implements it.
Reproducible: Always
Steps to Reproduce:
I have a patch ready, waiting for bug 326944.
Updated•18 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
Comment on attachment 9012161 [details] [diff] [review]
Remove nsIListControlFrame interface
Not your fault, but this seems a little bit silly:
> nsIFrame* mDropdownFrame; // dropdown list frame
>- nsIListControlFrame * mListControlFrame; // ListControl Interface for the dropdown frame
>+ nsListControlFrame* mListControlFrame; // ListControl for the dropdown frame
given that it's actually the same frame:
https://searchfox.org/mozilla-central/rev/ffe6eaf2f032e58ec3b0650a87df2c62ae4ca441/layout/forms/nsComboboxControlFrame.cpp#977-978
It seems we could just change the type for mDropdownFrame
to nsListControlFrame* and get rid of mListControlFrame.
File a follow-up bug on fixing that?
Attachment #9012161 -
Flags: review?(mats) → review+
Comment 3•7 years ago
|
||
Also, we do static_cast<nsListControlFrame*>(mDropdownFrame)
in a number of places. We should clean that up too in that
follow-up bug.
Pushed by neil@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d081601f722b
remove nsIListControlFrame interface, r=mats
Assignee | ||
Comment 5•7 years ago
|
||
I filed bug 1494330.
Comment 6•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
status-firefox64:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in
before you can comment on or make changes to this bug.
Description
•