Bug 328680, remove nsIListControlFrame interface, r=mats